--- a/css/general.css
+++ b/css/general.css
@@ -13,6 +13,8 @@ body {
     padding: 10px 10px;
 }
 
+
+
 .header a {
     float: left;
     color: black;
@@ -22,6 +24,7 @@ body {
     font-size: 18px;
     line-height: 25px;
     border-radius: 4px;
+    color: #f0f8ff;
 }
 
 #sahibinden-logo {
