--- a/css/general.css
+++ b/css/general.css
@@ -63,28 +63,6 @@ body {
 }
 
 
-/* Grid Style */
-
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto auto;
-    padding: 10px;
-    margin-top: 5px;
-}
-
-.grid-item {
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    font-size: 20px;
-    text-align: center;
-    background-color: #f0f1f3;
-}
-
-.grid-header {
-    background-color: #38a7d2;
-    color: #f0f8ff;
-}
-
-
 #events {
     margin: 10px 10px 1em;
     padding: 1em;
@@ -107,4 +85,63 @@ body {
     display: inline-block;
     font-size: 14px;
     cursor: pointer;
+}
+
+
+#test-result-info {
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#result {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#result td, #result th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#result tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#result tr:hover {
+    background-color: #ddd;
+}
+
+#result th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    color: white;
+}
+
+hr {
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-style: inset;
+    border-width: 1px;
+}
+
+#result th#result-küre {
+    background-color: #297794;
+}
+
+#result th#result-passed {
+    background-color: #23af00;
+}
+
+#result th#result-failed {
+    background-color: #af484f;
+}
+
+#result th#result-disabled {
+    background-color: #969696;
 }
