--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -122,10 +126,7 @@ body {
 
 hr {
     display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0.5em 10px;
     border-style: inset;
     border-width: 1px;
 }
@@ -144,4 +145,10 @@ hr {
 
 #result th#result-disabled {
     background-color: #969696;
+}
+
+.page-header > h1 {
+    font-size: 20px;
+    text-align: center;
+    font-family: Comic Sans MS, Comic Sans, cursive;
 }
